[package]
name = "moc-rich-presence"
version = "0.1.0"
authors = ["phnixir <ayitsmephoenix@airmail.cc>"]
edition = "2018"
description = "Minimalistic program to add discord rich presence for Music on Console (MoC)"
readme = "README.md"
repository = "https://github.com/phnixir/moc-rich-presence"
license = "MPL-2.0"
keywords = ["moc", "music-on-console", "utility", "rich-presence", "discord"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.1.7"
moc-rs = "0.1.1"
